# VoxelGame_nonameforityet

./: CMakeLists.txt  CMakePresets.json  LICENSE.txt  README.md  VoxelGame_nonameforityet.cpp  VoxelGame_nonameforityet.h
assets/: continentalness.txt
files/assets/: blockInventoryHighlight.psd  block_inventory.psd  crossair.psd  inventory_atlas.psd  water.psd
files/libs/GLAD/: glad.c
files/libs/STB/: stb_image.c
files/shaders/: color.frag  color.vert  meshTexture2D.frag  shader.frag  shader.vert  shader3Ditem.vert
files/src/: main.cpp
files/src/gameplay/world/: chunk.cpp  chunk.hpp  chunkGrid.cpp  chunkGrid.hpp
files/src/physics/collisions/: basicHitbox.hpp
files/src/rendering/: shader.cpp  shader.hpp
files/src/rendering/GUI/HUD/: hotbar.cpp  hotbar.hpp  inventory.cpp  inventory.hpp
files/src/rendering/GUI/Items/: itemRenderer.cpp  itemRenderers.hpp  itemType.hpp  itemTypeManager.hpp
files/src/rendering/GUI/shapes/: rectangle.cpp  rectangle.hpp
files/src/rendering/assets_managing/: color_utils.hpp  image.cpp  utilities.hpp
files/src/rendering/assets_managing/texturing/: atlas.hpp  texture.cpp  texture.hpp
files/src/rendering/mesh/: mesh.cpp  mesh.hpp
files/src/rendering/utilities/: camera.hpp  cubeHighlight.hpp  ray.hpp
files/src/rendering/world_managing/data/: chunkGenerator.cpp  chunkGenerator.hpp
files/src/rendering/world_managing/data/TypeManagement/: voxelType.hpp  voxelTypeManager.hpp
files/src/rendering/world_managing/data/basic/: cube.cpp  cube.hpp  vertex.hpp  voxel.cpp  voxel.hpp
files/src/rendering/world_managing/data/chunk/: chunk.cpp  chunk.hpp  chunkMesh.cpp  chunkMesh.hpp
files/src/uHeaders/: debug.hpp  opengl.hpp  types.hpp
files/src/utilities/time/: clock.cpp  clock.hpp
files/src/window_and_inputs/: inputs.hpp  window.cpp  window.hpp
files/src/world/: world.cpp  world.hpp
files/src/world/players/player/: player.cpp  player.hpp
files/src/world/voxels/: chunk.cpp  chunk.hpp  chunkGrid.cpp  chunkGrid.hpp
files/src/world/voxels/utilities/: ray.hpp
libs/GLAD/glad/: glad.h
shaders/: color.frag  color.vert  meshTexture2D.vert  shader.frag  shader.vert  shader3Ditem.frag  shader3Ditem.vert
shaders/simple/: skybox.frag  skybox.vert
shaders/text_render/: text2D.frag  text2D.vert
src/: main.cpp
src/data/: image.cpp  image.hpp  item.hpp  renderStates.hpp  vertex.hpp  voxel.hpp
src/physics/collisions/: basicHitbox.hpp
src/physics/transforms/: transform2D.hpp  transform3D.hpp  transformable2D.hpp  transformable3D.hpp
src/rendering/: mesh.cpp  mesh.hpp  shader.cpp  shader.hpp  skybox.hpp  texture.cpp  texture.hpp
src/rendering/GUI/: guiInventory.cpp  guiInventory.hpp  guiItemStack.hpp  hotbar.cpp  hotbar.hpp  inventory.cpp  inventory.hpp  itemStackGUI.hpp
src/rendering/GUI/HUD/: hotbar.cpp  hotbar.hpp  inventory.cpp  inventory.hpp  item2D.hpp  item_utils_2D.hpp
src/rendering/GUI/Items/: item3DMesh.cpp  item3DMesh.hpp  itemRenderer.cpp  itemRenderer.hpp  itemType.hpp  itemTypeManager.hpp
src/rendering/GUI/elements/: rectangle.cpp  rectangle.hpp
src/rendering/GUI/shapes/: rectangle.cpp  rectangle.hpp  text.cpp  text.hpp
src/rendering/GUI/text/: font.cpp  font.hpp  text.cpp  text.hpp
src/rendering/assets_managing/: color_utils.hpp  image.cpp  image.hpp  utilities.hpp
src/rendering/assets_managing/texturing/: texture.cpp  texture.hpp
src/rendering/chunkMesh/: chunkMesh.cpp  chunkMesh.hpp
src/rendering/debug/: debugRenderer.hpp
src/rendering/mesh/: mesh.cpp  mesh.hpp
src/rendering/text/: font.cpp  font.hpp  text.cpp  text.hpp
src/rendering/utilities/: atlas.hpp  camera.hpp  color_channels.hpp  cubeHighlight.hpp  debugRenderer.hpp  frustum_culling.hpp
src/rendering/world_managing/data/TypeManagement/: voxelType.hpp  voxelTypeManager.hpp
src/rendering/world_managing/data/basic/: vertex.hpp
src/rendering/world_managing/data/chunk/: chunkMesh.cpp  chunkMesh.hpp
src/transforms/: transform2D.hpp  transform3D.hpp
src/transforms/collisions/: basicHitbox.hpp
src/uHeaders/: opengl.hpp  types.hpp
src/utilities/: camera.hpp  event.hpp  inputs.hpp  opengl.hpp  resourceManager.hpp  resourceManaging.hpp  types.hpp  window.cpp  window.hpp
src/utilities/time/: clock.hpp
src/window_and_inputs/: window.cpp  window.hpp
src/world/: world.cpp  world.hpp
src/world/chunks/: chunk.cpp  chunk.hpp  chunkGrid.cpp  chunkGrid.hpp
src/world/chunks/utilities/: ray.hpp
src/world/entities/: basicEntity.cpp  basicEntity.hpp  basic_entity.cpp  basic_entity.hpp  entity.cpp  entity.hpp  entityChunk.cpp  entityChunk.hpp  entityChunkGrid.cpp  entityChunkGrid.hpp
src/world/entities/entityChunks/: entityChunk.cpp  entityChunk.hpp  entityChunkGrid.cpp  entityChunkGrid.hpp
src/world/entities/items/: item.hpp  itemEntity.cpp  itemEntity.hpp  itemStack.cpp  itemStack.hpp
src/world/entities/player/: camera.hpp  inventory.cpp  inventory.hpp  player.cpp  player.hpp
src/world/players/player/: player.cpp  player.hpp
src/world/terrain/: terrain.cpp  terrain.hpp
src/world/types/: itemType.hpp  itemTypeManager.hpp  voxelType.hpp  voxelTypeManager.hpp
src/world/voxels/: chunk.cpp  chunk.hpp  chunkGrid.cpp  chunkGrid.hpp  voxel.cpp  voxel.hpp
src/world/voxels/utilities/: ray.hpp
